--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -41,8 +41,8 @@
                   <Label text="Squadra" GridPane.rowIndex="1" />
                   <ChoiceBox fx:id="boxSeason" prefWidth="200.0" GridPane.columnIndex="1" />
                   <ChoiceBox fx:id="boxTeam" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" onAction="#handleCarica" text="Carica partite" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#handleDomino" text="Domino" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button fx:id="btnCarica" mnemonicParsing="false" onAction="#handleCarica" text="Carica partite" GridPane.columnIndex="2" />
+                  <Button fx:id="btnDomino" mnemonicParsing="false" onAction="#handleDomino" text="Domino" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <TextArea fx:id="txtResult" prefRowCount="20" />
